# debootstrap-for-ios

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  functions
config/: Makefile.am  Makefile.in  suites
debian/: NEWS  changelog  control  rules
helper/: Makefile.am  Makefile.in
helper/cdebootstrap-helper-apt/: Makefile.am  Makefile.in
helper/cdebootstrap-helper-apt/DEBIAN/: postinst  postrm
helper/cdebootstrap-helper-apt/usr/lib/apt/methods/: bootstrap
helper/cdebootstrap-helper-makedev/: Makefile.am  Makefile.in
helper/cdebootstrap-helper-rc.d/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  decompress.h  download.h  execute.h  gpg.h  install.h  suite.h  suite_action.h  suite_config.h  target.h
src/: Makefile.am  Makefile.in  check.c  decompress_bz.c  decompress_gz.c  decompress_null.c  decompress_xz.c  download.c  execute.c  gpg.c  install.c  log.c  package.c  suite.c  suite_action.c  suite_config.c  target.c
src/frontend/: Makefile.am  Makefile.in
src/frontend/debian-installer/: Makefile.am  Makefile.in
src/frontend/standalone/: Makefile.am  Makefile.in  cdebootstrap.man  main.c
xz/: readme.txt  xz-utils_4.999.9beta-1_iphoneos-arm.deb  xz-utils_4.999.9beta-2.dsc  xz-utils_4.999.9beta-2_iphoneos-arm.deb
