dist_config_DATA = \
	suites

genericconfigdir = $(configdir)/generic
dist_genericconfig_DATA = \
	generic/action \
	generic/packages \
	generic/sections

genericubuntuconfigdir = $(configdir)/generic-ubuntu
dist_genericubuntuconfig_DATA = \
	generic-ubuntu/action \
	generic-ubuntu/packages \
	generic-ubuntu/sections

